--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "@sendgrid/mail": "^7.7.0",
     "cors": "2.8.5",
+    "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
-    "gravatar": "^1.8.2",
-    "jimp": "^0.22.10",
-    "joi": "^17.9.2",
+    "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.4",
+    "mongoose": "^7.4.5",
     "morgan": "1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sendgrid": "^5.2.3"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "eslint": "7.19.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "16.0.3",
